documentation-ingress-classes.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: IngressClass
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"IngressClass","metadata":{"annotations":{},"name":"alb"},"spec":{"controller":"eks.amazonaws.com/alb","parameters":{"apiGroup":"eks.amazonaws.com","kind":"IngressClassParams","name":"alb"}}}
    creationTimestamp: "2026-07-30T18:24:53Z"
    generation: 1
    name: alb
    resourceVersion: "453403"
    uid: c5712520-916c-48ef-8d15-191e209611a0
  spec:
    controller: eks.amazonaws.com/alb
    parameters:
      apiGroup: eks.amazonaws.com
      kind: IngressClassParams
      name: alb
      scope: Cluster
- apiVersion: eks.amazonaws.com/v1
  kind: IngressClassParams
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"eks.amazonaws.com/v1","kind":"IngressClassParams","metadata":{"annotations":{},"name":"alb"},"spec":{"scheme":"internet-facing"}}
    creationTimestamp: "2026-07-30T18:24:53Z"
    generation: 1
    name: alb
    resourceVersion: "453402"
    uid: c904bcbb-2a2e-4b86-b4b5-5d28a9534086
  spec:
    scheme: internet-facing
kind: List
metadata:
  resourceVersion: ""
